--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,44 +8,32 @@ services:
     image: laravel-app
     container_name: laravel-app
     restart: unless-stopped
-    working_dir: /var/www
-    volumes:
-      - .:/var/www
-      - ./vendor:/var/www/vendor
-      - ./node_modules:/var/www/node_modules
-    networks:
-      - laravel
-
-  webserver:
-    image: nginx:alpine
-    container_name: laravel-webserver
-    restart: unless-stopped
     ports:
-      - "8000:80"
+      - "8080:80" # Mapeia a porta 80 do container para a porta 8080 do host
     volumes:
       - .:/var/www
-      - ./nginx:/etc/nginx/conf.d
     networks:
-      - laravel
+      - app-network
 
   db:
     image: mysql:5.7
-    container_name: laravel-db
+    container_name: mysql-db
     restart: unless-stopped
-    environment:
-      MYSQL_DATABASE: laravel
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_USER: laravel
-      MYSQL_PASSWORD: secret
-    volumes:
-      - dbdata:/var/lib/mysql
     ports:
       - "3306:3306"
+    environment:
+      MYSQL_ROOT_PASSWORD: root_password
+      MYSQL_DATABASE: laravel
+      MYSQL_USER: user
+      MYSQL_PASSWORD: password
+    volumes:
+      - db-data:/var/lib/mysql
     networks:
-      - laravel
+      - app-network
 
 networks:
-  laravel:
+  app-network:
+    driver: bridge
 
 volumes:
-  dbdata:
+  db-data:
