--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,22 @@ services:
     image: laravel-app
     container_name: laravel-app
     restart: unless-stopped
-    ports:
-      - "8080:80" # Mapeia a porta 80 do container para a porta 8080 do host
     volumes:
       - .:/var/www
+    networks:
+      - app-network
+
+  nginx:
+    image: nginx:latest
+    container_name: nginx
+    restart: unless-stopped
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - .:/var/www
+    depends_on:
+      - app
     networks:
       - app-network
 
