--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -9,7 +9,7 @@ server {
 
     location ~ \.php$ {
         include fastcgi_params;
-        fastcgi_pass app:9000;
+        fastcgi_pass app:9000; # Nome do serviço PHP-FPM no docker-compose.yml
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
@@ -18,4 +18,3 @@ server {
         deny all;
     }
 }
-
