--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "autoprefixer": "^10.4.20",
         "postcss": "^8.4.41",
-        "tailwindcss": "^3.4.10"
+        "tailwindcss": "^3.4.10",
+        "@heroicons/react": "^2.1.5"
     }
 }
